Updating the welcome section
Adding space in between the text

--- a/index.html
+++ b/index.html
@@ -43,7 +43,11 @@
 						<h2></h2>
 					</header>
 					<div style="display: flex; align-items: center; justify-content: space-between;">
-            					<p style="margin: 0; flex: 1;">My passion is to depict on canvas my way of seeing and expressing my surroundings.</p>
+            					<p style="margin: 0; flex: 1;">My passion is to depict on canvas
+							<br>
+							my way of seeing and expressing
+							<br>
+							my surroundings.</p>
             					<img src="images/Signature.png" style="margin-left: 20px; height: auto; max-width: 30%;">
         				</div>
     				</div>
@@ -88,7 +92,11 @@
 					<header>
 						<h2><center>STYLE</center></h2>
 					</header>
-					<p align="justify"> Fascinated by geometric figures and nature, Angela's style mixes the abstract with figurative concepts. Everyday scenes inspire the creative process, expressed on canvas using acrylic paints, tape and photographs. She enjoys the surprise when the tape is removed from the canvas, showing a concoction of figures and empty spaces, transcending between opacity and transparency, luminosity and darkness. Angela is inspired by the contradicting beauty of nature - symmetry and chaos, strength and fragility, peace and violence, light and shadow - thus becoming key components of her work.</p>
+					<p align="justify"> 
+								Fascinated by geometric figures and nature, Angela's style mixes the abstract with figurative concepts. Everyday scenes inspire the creative process, expressed on canvas using acrylic paints, tape and photographs. 
+								She enjoys the surprise when the tape is removed from the canvas, showing a concoction of figures and empty spaces, transcending between opacity and transparency, luminosity and darkness. 
+								Angela is inspired by the contradicting beauty of nature - symmetry and chaos, strength and fragility, peace and violence, light and shadow - thus becoming key components of her work.
+					</p>
 				</div>
 				<a href="#work" class="button style2 down anchored">Next</a>
 			</section>
