Updating welcome section
Changing the text layout of the welcome section

--- a/index.html
+++ b/index.html
@@ -43,9 +43,9 @@
 						<h2></h2>
 					</header>
 					<div style="display: flex; align-items: center; justify-content: space-between;">
-            					<p style="margin: 0; flex: 1;">My passion is to depict on canvas
+            					<p style="margin: 0; flex: 1;">My passion is to depict on canvas my way of
 							<br>
-							my way of seeing and expressing
+							seeing and expressing
 							<br>
 							my surroundings.</p>
             					<img src="images/Signature.png" style="margin-left: 20px; height: auto; max-width: 30%;">
