--- a/index.html
+++ b/index.html
@@ -38,18 +38,19 @@
 
 		<!-- Intro -->
 			<section id="intro" class="main style2 right dark fullscreen">
-				<div class="content box style2">
-					<header>
-						<h2></h2>
-					</header>
-					<div style="display: flex; align-items: center; justify-content: space-between;">
-            					<p style="margin: 0; flex: 1;">My passion is to depict on canvas my way of
-							<br>
-							seeing and expressing
-							<br>
-							my surroundings.</p>
-            					<img src="images/Signature.png" style="margin-left: 20px; height: auto; max-width: 30%;">
-        				</div>
+    				<div class="content box style2">
+        				<header>
+            					<h2></h2>
+        				</header>
+        			<div style="position: relative;">
+            				<p style="margin-bottom: 0;">
+                			My passion is to depict on canvas my way of 
+                			seeing and expressing my surroundings.
+            				</p>
+            				<div style="position: absolute; right: 0; bottom: -10px; width: 30%;">
+                			<img src="images/Signature.png" style="width: 100%; height: auto;">
+            				</div>
+        			</div>
     				</div>
    					<a href="#artist" class="button style2 down anchored">More</a>
 			</section>
