--- a/index.html
+++ b/index.html
@@ -38,20 +38,18 @@
 
 		<!-- Intro -->
 			<section id="intro" class="main style2 right dark fullscreen">
-    				<div class="content box style2">
+				<div class="content box style2">
         				<header>
             					<h2></h2>
         				</header>
-        			<div style="position: relative;">
-            				<p style="margin-bottom: 0;">
-                			My passion is to depict on canvas my way of 
-                			seeing and expressing my surroundings.
-            				</p>
-            				<div style="position: absolute; right: 0; bottom: -10px; width: 30%;">
-                			<img src="images/Signature.png" style="width: 100%; height: auto;">
-            				</div>
-        			</div>
-    				</div>
+        				<div style="overflow: hidden;">
+            					<img src="images/Signature.png" style="float: right; width: 30%; margin-left: 10px; margin-bottom: 5px;">
+            						<p>
+                						My passion is to depict on canvas my way of seeing and expressing my surroundings.
+            						</p>
+        				</div>
+				</div>
+    				
    					<a href="#artist" class="button style2 down anchored">More</a>
 			</section>
 
