Update welcome section

--- a/index.html
+++ b/index.html
@@ -38,17 +38,19 @@
 
 		<!-- Intro -->
 			<section id="intro" class="main style2 right dark fullscreen">
-				<div class="content box style2">
+    				<div class="content box style2">
         				<header>
             					<h2></h2>
         				</header>
-        				<div style="overflow: hidden;">
-            					<img src="images/Signature.png" style="float: right; width: 30%; margin-left: 10px; margin-bottom: 5px;">
-            						<p>
-                						My passion is to depict on canvas my way of seeing and expressing my surroundings.
-            						</p>
+        				<div style="display: flex; align-items: center; justify-content: flex-start; gap: 10px;">
+            					<p style="margin: 0; flex: 0 1 auto;">My passion is to depict on canvas my way of
+                				<br>
+               					seeing and expressing
+                				<br>
+                				my surroundings.</p>
+            						<img src="images/Signature.png" style="margin-left: 5px; height: auto; max-width: 30%;">
         				</div>
-				</div>
+    				</div>
     				
    					<a href="#artist" class="button style2 down anchored">More</a>
 			</section>
