Update welcome section to wrap the text around the signature

--- a/index.html
+++ b/index.html
@@ -42,13 +42,17 @@
         				<header>
             					<h2></h2>
         				</header>
-        				<div style="display: flex; align-items: center; justify-content: flex-start; gap: 10px;">
-            					<p style="margin: 0; flex: 0 1 auto;">My passion is to depict on canvas my way of
-                				<br>
-               					seeing and expressing
-                				<br>
-                				my surroundings.</p>
-            						<img src="images/Signature.png" style="margin-left: 5px; height: auto; max-width: 30%;">
+        				<div style="position: relative; overflow: hidden;">
+            					<!-- Float the signature image to the right -->
+            					<img src="images/Signature.png" style="float: right; width: 30%; margin-left: 10px; margin-bottom: 5px;">
+            						<!-- Keep your text with line breaks -->
+            						<p style="margin: 0;">
+                					My passion is to depict on canvas my way of
+                					<br>
+                					seeing and expressing
+                					<br>
+                					my surroundings.
+            					</p>
         				</div>
     				</div>
     				
