--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 			</header>
 
 		<!-- Intro -->
-			section id="intro" class="main style2 right dark fullscreen">
+			<section id="intro" class="main style2 right dark fullscreen">
     <div class="content box style2">
         <header>
             <h2></h2>
