--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@
         			</p>
         
         				<div style="position: relative; overflow: hidden;">
-            				<!-- Signature positioned to start more to the left -->
-            					<img src="images/Signature.png" style="float: right; width: 35%; margin-left: 15px; margin-bottom: 10px;">
+            				<!-- Signature positioned to start more to the right -->
+            					<img src="images/Signature.png" style="float: right; height: 60px; width: auto; margin-left: 5px; margin-bottom: 10px;">
             
             				<!-- Remaining text will wrap around the floated signature -->
             				<p style="margin: 0;">
