--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         
         				<div style="position: relative; overflow: hidden;">
             				<!-- Signature positioned to start more to the right -->
-            					<img src="images/Signature.png" style="float: right; height: 60px; width: auto; margin-left: 5px; margin-bottom: 10px;">
+            					<img src="images/Signature.png" style="float: right; height: 60px; width: auto; margin-left: 5px; margin-right: 20px; margin-bottom: 10px;">
             
             				<!-- Remaining text will wrap around the floated signature -->
             				<p style="margin: 0;">
