--- a/index.html
+++ b/index.html
@@ -44,14 +44,14 @@
         				</header>
         			<!-- First line of text -->
         			<p style="margin: 0 0 5px 0;">
-            			My passion is to depict on canvas my way
+            			My passion is to depict on canvas my way of
         			</p>
         
         				<div style="display: flex; align-items: center; gap: 15px;">
             					<!-- Text for second and third lines -->
             						<div>
                 						<p style="margin: 0;">
-                    						of seeing and expressing
+                    						seeing and expressing
                     						<br>
                     						my surroundings.
                 						</p>
