Update index.html - welcome content
Updating text layout

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 
         			<!-- First line of text -->
         			<p style="margin: 0 0 5px 0;">
-            			My passion is to depict on canvas my way 
+            			My passion is to depict on canvas my 
         			</p>
 
         				<div style="display: flex; align-items: center; gap: 35px;">
@@ -53,6 +53,8 @@
             					<!-- Text for second and third lines -->
             						<div>
                 						<p style="margin: 0;">
+								way
+								<br>
                     						of seeing and expressing
                     						<br>
                     						my surroundings.
