--- a/index.html
+++ b/index.html
@@ -85,18 +85,19 @@
 					<header>
 						<h2>MEET THE ARTIST</h2>
 					</header>
-						<p align="justify">Angela Stelin was born in Brazil, growing up between the vibrant energy of São Paulo and the untouched serenity of Mato Grosso do Sul. 
+						<p align="justify">
+							Angela Stelin was born in Brazil, growing up between the bustling São Paulo and the serenity of Mato Grosso do Sul. 
 							Raised in a household where music, literature, journalism, and the arts intertwined, she discovered an early fascination with drawing.
 							Captivated by shapes and proportions, she pursued Industrial Design, graduating from Fundação Armando Álvares Penteado (FAAP) in 1982. 
 							<br>
 							<br>
 							In 1994, she embarked on a journey across the world with her family, collecting colors, cultures, and inspirations along the way. 
-							She lived amidst the exotic allure of Morocco, the mystique of Istanbul, the elegance of Switzerland, the vibrant pulse of London, and the Nordic charm of Sweden, until finding in the Algarve a sanctuary where light and landscape became her new palette.
-							Throughout her travels, she embraced various artistic influences and techniques, such as delicate marbling (Ebru), miniature painting, gouache, and watercolor, enriching her artistic expression.  
+							She lived amidst the exotic allure of Morocco, the mystique of Turkey, the Nordic charm of Sweden, the vibrant pulse of UK, and the natural beauty of Switzerland, until finding in Portugal a sanctuary where light and landscape became her new palette.
+							Throughout her travels, she embraced various artistic influences and techniques, such as delicate marbling (Ebru), miniature painting, gouache, watercolor, and acrylic on canvas, enriching her artistic expression.  
 							<br>
 							<br>
-							Between the quietude of Åmål, the creative effervescence of Gothenburg, and the boundless energy of London, Angela developed a unique style—one where nature translates into colors and emotions, blending the real with the deeply felt. 
-							Now, embraced by the golden light of Portugal, she continues to explore new ways of expressing the profound connection between art, emotion, and the world, creating works that transcend the canvas and speak to the soul.
+							Between the quietude of Åmål, the creative effervescence of Gothenburg, and the energy of London, Angela developed her own style where nature translates into colors and emotions, blending the real with the deeply felt. 
+							Now, embraced by the golden light of Algarve, she continues to explore new ways of expressing the profound connection between art, emotion, and the world, creating works that transcend the canvas and speak to the soul.
 					
 						</p>
 				</div>
