--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         				</header>
 
         			<!-- First line of text -->
-        			<p style="margin: 0 0 5px 0;">
+        			<p style="margin: 0 0 5px 0; white-space: nowrap;">
             			My passion is to depict on canvas my 
         			</p>
 
