--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
 		<!-- Intro -->
 			<section id="intro" class="main style2 right dark fullscreen">
-    				<div class="content box style2">
+    				<div class="content box style2" style="padding-right: 15px;" >
         				<header>
             				<h2></h2>
         				</header>
@@ -48,7 +48,7 @@
             			My passion is to depict on canvas my 
         			</p>
 
-        				<div style="display: flex; align-items: center; gap: 15px;">
+        				<div style="display: flex; align-items: center; gap: 20px;">
 
             					<!-- Text for second and third lines -->
             						<div>
