--- a/index.html
+++ b/index.html
@@ -38,17 +38,18 @@
 
 		<!-- Intro -->
 			<section id="intro" class="main style2 right dark fullscreen">
-    				<div class="content box style2" style="padding-right: 15px;" >
+    				<div class="content box style2">
         				<header>
             				<h2></h2>
         				</header>
 
         			<!-- First line of text -->
+				<div style="padding:0 10px 0 0;"> <!-- Add consistent padding -->
         			<p style="margin: 0 0 5px 0; white-space: nowrap;">
             			My passion is to depict on canvas my 
         			</p>
 
-        				<div style="display: flex; align-items: center; gap: 20px;">
+        				<div style="display: flex; align-items: center; gap: 25px;">
 
             					<!-- Text for second and third lines -->
             						<div>
@@ -62,7 +63,7 @@
             						</div>
 						
             					<!-- Signature image -->
-            						<div>
+            						<div style="margin-right: 10px;"> <!-- Add right margin to signature container -->
                 						<img src="images/Signature.png" style="height: 70px; width: auto;">
         						</div>
         				</div>
