--- a/port/port.html
+++ b/port/port.html
@@ -62,21 +62,19 @@
 						<h2>A ARTISTA</h2>
 					</header>
 						<p align="justify">
-								Angela Stelin nasceu no Brasil, entre o fervilhante dinamismo de São Paulo e a serenidade quase intocada de Mato Grosso do Sul. 
+								Angela Stelin nasceu no Brasil, entre o dinamismo de São Paulo e a serenidade de Mato Grosso do Sul.  
 								Criada em um ambiente onde a música, a literatura, o jornalismo e as artes se entrelaçavam, descobriu cedo o fascínio pelo desenho. 
-								Movida pela paixão pelas formas e proporções, seguiu o caminho do Desenho Industrial, graduando-se pela Fundação Armando Álvares Penteado (FAAP) em 1982.
+								Movida pela paixão por formas e proporções, seguiu o caminho do Desenho Industrial, graduando-se pela Fundação Armando Álvares Penteado (FAAP) em 1982. 
 							<br>
 							<br>
 								Em 1994, embarcou com sua família em uma jornada pelo mundo, colecionando cores, culturas e inspirações. 
-								Viveu no exotismo de Marrocos, no mistério de Istambul, na elegância da Suíça, na vibrante Londres e no encanto nórdico da Suécia, até encontrar no Algarve um refúgio onde luz e paisagem se tornam sua nova paleta. Em
-								Pelo caminho, absorveu influências e técnicas, como a delicada marmorização (Ebru), miniatura, guache e aquarela, enriquecendo sua expressão artística.
+								Viveu no exótico Marrocos, na mística Turquia, entre os encantos nórdicos da Suécia e o vibrante Reino Unido, na beleza natural da Suíça até encontrar, em Portugal, um refúgio onde luz e paisagem se tornam sua nova paleta.
+								Pelo caminho, absorveu influências e técnicas, como a delicada marmorização (Ebru), miniatura, guache, aquarela e pintura acrílica, enriquecendo sua expressão artística. 
 							<br>
 							<br>
-								Entre a quietude da pequena Åmål, a efervescência criativa de Gotemburgo e a pulsação infinita de Londres, Angela desenvolveu um estilo próprio, onde a natureza se traduz em 
-								cores e emoções, misturando o real e o sensível. 
-								Agora, envolvida pelo sol dourado de Portugal, encontra novas formas de expressar a conexão profunda entre arte, sentimento e 
-								mundo, criando obras que transcendem a tela e tocam a alma.
-								
+								Entre a quietude da pequena Åmål, a efervescência criativa de Gotemburgo e a energia de Londres, Angela desenvolveu um estilo próprio, onde a natureza se traduz em cores e emoções, misturando o real e o sensível. 
+								Agora, envolvida pelo sol dourado do Algarve, encontra novas formas de expressar a conexão profunda entre arte, sentimento e mundo, criando obras que transcendem a tela e tocam a alma. 
+
 						</p>
 				</div>
 				<a href="#one" class="button style2 down anchored">Next</a>
