Update index.html - closing one of the Div

--- a/index.html
+++ b/index.html
@@ -45,20 +45,20 @@
 
         			<!-- First line of text -->
 				<div style="padding:0 10px 0 0;"> <!-- Add consistent padding -->
-        			<p style="margin: 0 0 5px 0; white-space: nowrap;">
-            			My passion is to depict on canvas my 
-        			</p>
+        				<p style="margin: 0 0 5px 0; white-space: nowrap;">
+            					My passion is to depict on canvas my 
+        				</p>
 
         				<div style="display: flex; align-items: center; gap: 25px;">
 
             					<!-- Text for second and third lines -->
             						<div>
                 						<p style="margin: 0;">
-								way
-								<br>
-                    						of seeing and expressing
-                    						<br>
-                    						my surroundings.
+									way
+									<br>
+                    							of seeing and expressing
+                    							<br>
+                    							my surroundings.
                 						</p>
             						</div>
 						
@@ -67,6 +67,7 @@
                 						<img src="images/Signature.png" style="height: 70px; width: auto;">
         						</div>
         				</div>
+				</div>
     				</div>
     				
    					<a href="#artist" class="button style2 down anchored">More</a>
