--- a/index.html
+++ b/index.html
@@ -38,18 +38,17 @@
 
 		<!-- Intro -->
 			<section id="intro" class="main style2 right dark fullscreen">
-    				<div class="content box style2">
+    				<div class="content box style2" style = "width: 350px; max-width:95%">
         				<header>
-            				<h2></h2>
+            					<h2></h2>
         				</header>
 
         			<!-- First line of text -->
-				<div style="padding:0 10px 0 0;"> <!-- Add consistent padding -->
         				<p style="margin: 0 0 5px 0; white-space: nowrap;">
             					My passion is to depict on canvas my 
         				</p>
 
-        				<div style="display: flex; align-items: center; gap: 25px;">
+        				<div style="display: flex; align-items: center; gap: 20px;">
 
             					<!-- Text for second and third lines -->
             						<div>
