Update index.html - welcome intro box
Updating layout of the text according to Welcome text 2

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 
         			<!-- First line of text -->
         				<p style="margin: 0 0 5px 0; white-space: nowrap;">
-            					My passion is to depict on canvas my 
+            					My passion is to depict on canvas 
         				</p>
 
         				<div style="display: flex; align-items: center; gap: 20px;">
@@ -53,9 +53,9 @@
             					<!-- Text for second and third lines -->
             						<div>
                 						<p style="margin: 0;">
-									way
+									my way of seeing
 									<br>
-                    							of seeing and expressing
+                    							and expressing
                     							<br>
                     							my surroundings.
                 						</p>
