Update index.html - adding padding 2em to welcome box

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
 		<!-- Intro -->
 			<section id="intro" class="main style2 right dark fullscreen">
-    				<div class="content box style2" style = "width: 440px; max-width:95%">
+    				<div class="content box style2" style = "width: 440px; max-width:95%; padding: 2em;">
         				<header>
             					<h2></h2>
         				</header>
@@ -48,7 +48,7 @@
             					My passion is to depict on canvas 
         				</p>
 
-        				<div style="display: flex; align-items: center; gap: 20px;">
+        				<div style="display: flex; align-items: center; justify-content: space-between; margin-right:0;">
 
             					<!-- Text for second and third lines -->
             						<div>
@@ -62,7 +62,7 @@
             						</div>
 						
             					<!-- Signature image -->
-            						<div style="margin-right: 10px;"> <!-- Add right margin to signature container -->
+            						<div>
                 						<img src="images/Signature.png" style="height: 70px; width: auto;">
         						</div>
         				</div>
