Update index.html - trying padding 1em and adding gap of 20px back in

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
 		<!-- Intro -->
 			<section id="intro" class="main style2 right dark fullscreen">
-    				<div class="content box style2" style = "width: 440px; max-width:95%; padding: 2em;">
+    				<div class="content box style2" style = "width: 440px; max-width:95%; padding: 1em;">
         				<header>
             					<h2></h2>
         				</header>
@@ -48,7 +48,7 @@
             					My passion is to depict on canvas 
         				</p>
 
-        				<div style="display: flex; align-items: center; justify-content: space-between; margin-right:0;">
+        				<div style="display: flex; align-items: center; gap:20px; justify-content: space-between; margin-right:0;">
 
             					<!-- Text for second and third lines -->
             						<div>
