--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             					My passion is to depict on canvas 
         				</p>
 
-        				<div style="display: flex; align-items: center; gap:20px; justify-content: space-between; margin-right:0;">
+        				<div style="display: flex; align-items: center; gap: 20px; margin-bottom:0;">
 
             					<!-- Text for second and third lines -->
             						<div>
