--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
 
 		<!-- Intro -->
 			<section id="intro" class="main style2 right dark fullscreen">
-    				<div class="content box style2" style = "width: 440px; max-width:95%; padding: 1em;">
-        				<header>
+    				<div class="content box style2" style = "width: 440px; max-width:95%; padding: 1.0em 1.5em 1.5em 1.5em;">
+        				<header style="margin-bottom:0.5em;">
             					<h2></h2>
         				</header>
 
@@ -48,7 +48,7 @@
             					My passion is to depict on canvas 
         				</p>
 
-        				<div style="display: flex; align-items: center; gap: 20px; margin-bottom:0;">
+        				<div style="display: flex; align-items: center; gap: 20px; margin-bottom:0; padding-right:5px;">
 
             					<!-- Text for second and third lines -->
             						<div>
