--- a/index.html
+++ b/index.html
@@ -38,14 +38,14 @@
 
 		<!-- Intro -->
 			<section id="intro" class="main style2 right dark fullscreen">
-    				<div class="content box style2" style = "width: 440px; max-width:95%; padding: 1.5em 1.5em 1.5em 1.5em;">
+    				<div class="content box style2" style = "width: 400px; max-width:95%; padding: 1.3em 1.3em 1.3em 1.3em;">
 
         			<!-- First line of text -->
         				<p style="margin: 0 0 5px 0; white-space: nowrap;">
             					My passion is to depict on canvas 
         				</p>
 
-        				<div style="display: flex; align-items: center; gap: 20px; margin-bottom:0; padding-right:5px;">
+        				<div style="display: flex; align-items: center; gap: 20px; margin-bottom:0; padding-right:0;">
 
             					<!-- Text for second and third lines -->
             						<div>
