--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
 
 		<!-- One -->
 			<section id="one" class="main style2 right dark fullscreen">
-				<div class="content box style2">
+				<div class="content box style2" style = "padding: 1.3em;">
 					<header>
 						<h2><center>STYLE</center></h2>
 					</header>
