--- a/port/port.html
+++ b/port/port.html
@@ -25,12 +25,12 @@
 				<!-- Nav -->
 					<nav id="nav">
 						<ul>
-							<li><a href="#intro"><b>BEM-VINDOS</b></a></li>
-							<li><a href="#artist"><b>A ARTISTA</b></a></li>
-							<li><a href="#one"><b>TÉCNICA E ESTILO</b></a></li>
-							<li><a href="#work"><b>GALERIA</b></a></li>
-							<li><a href="#contact"><b>CONTATO</b></a></li>
-							<li><a href="../index.html"><b>EN</b></a></li>
+							<li><a href="#intro">BEM-VINDOS</a></li>
+							<li><a href="#artist">A ARTISTA</a></li>
+							<li><a href="#one">TÉCNICA E ESTILO</a></li>
+							<li><a href="#work">GALERIA</a></li>
+							<li><a href="#contact">CONTATO</a></li>
+							<li><a href="../index.html">EN</a></li>
 						</ul>
 					</nav>
 
