--- a/port/port.html
+++ b/port/port.html
@@ -102,11 +102,29 @@
 					<!-- Lightbox Gallery  -->
 						<div class="container 90% gallery">
 							<div class="row 20% images">
-								<div class="6u 12u(mobile)"><a href="../../images/fulls/01.jpg" class="image fit from-left"><img src="../../images/thumbs/01.jpg" title="Ágata, acrílica s/ tela - 2009, 66 x 56 cm" alt="" /></a></div>
+								<div class="6u 12u(mobile)"><a href="../../images/fulls/Life.jpg" class="image fit from-left"><img src="../../images/thumbs/Thumb Life.png" title="Life, miniature - 2001, 20 x 30 cm" alt="" /></a></div>
+								<div class="6u 12u(mobile)"><a href="../../images/fulls/Ebru.jpg" class="image fit from-right"><img src="../../images/thumbs/Thumb Ebru.png" title="Paper Marbeling (Ebru) - 2001, 30 x 40 cm" alt="" /></a></div>
+							</div>
+							<br>
 
+							<div class="row 20% images">
+								<div class="6u 12u(mobile)"><a href="../../images/fulls/Ekgatan.JPG" class="image fit from-left"><img src="../../images/thumbs/Thumb Ekgatan.png" title="Ekgatan, acrílica s/ tela - 2008, 80 x 70 cm" alt="" /></a></div>
+								<div class="6u 12u(mobile)"><a href="../../images/fulls/01.JPG" class="image fit from-right"><img src="../../images/thumbs/0.1jpg" title="Ágata, acrílica s/ tela - 2009, 66 x 56 cm" alt="" /></a></div>
+							</div>
+							<br>
+
+							<div class="row 20% images">
+								<div class="6u 12u(mobile)"><a href="../../images/fulls/Heliconias.JPG" class="image fit from-left"><img src="../../images/thumbs/Thumb Heliconias.png" title="Heliconias, acrílica s/ tela - 2009, 90 x 60 cm" alt="" /></a></div>
+								<div class="6u 12u(mobile)"><a href="../../images/fulls/Menino Engenheiro.JPG" class="image fit from-right"><img src="../../images/thumbs/Thumb Menino Engenheiro.png" title="Menino Engenheiro, acrílica s/ tela - 2010, 100 x 70 cm" alt="" /></a></div>
+							</div>
+							<br>
+
+							<div class="row 20% images">
+								<div class="6u 12u(mobile)"><a href="../../images/fulls/Autumn.jpeg" class="image fit from-left"><img src="../../images/thumbs/Thumb Autumn.png" title="Autumn, acrílica s/ tela - 2012, 100 x 100 cm" alt="" /></a></div>
 								<div class="6u 12u(mobile)"><a href="../../images/fulls/02.jpg" class="image fit from-right"><img src="../../images/thumbs/02.jpg" title="First Spring Moments, acrílica s/ tela - 2013, 100 x 80 cm" alt="" /></a></div>
 							</div>
 							<br>
+							
 							<div class="row 20% images">
 								<div class="6u 12u(mobile)"><a href="../../images/fulls/03.jpg" class="image fit from-left"><img src="../../images/thumbs/03.jpg" title="Blue Lagoon, acrílica s/ tela - 2014, 100 x 70 cm" alt="" /></a></div>
 
