--- a/port/port.html
+++ b/port/port.html
@@ -109,7 +109,7 @@
 
 							<div class="row 20% images">
 								<div class="6u 12u(mobile)"><a href="../../images/fulls/Ekgatan.JPG" class="image fit from-left"><img src="../../images/thumbs/Thumb Ekgatan.png" title="Ekgatan, acrílica s/ tela - 2008, 80 x 70 cm" alt="" /></a></div>
-								<div class="6u 12u(mobile)"><a href="../../images/fulls/01.JPG" class="image fit from-right"><img src="../../images/thumbs/0.1jpg" title="Ágata, acrílica s/ tela - 2009, 66 x 56 cm" alt="" /></a></div>
+								<div class="6u 12u(mobile)"><a href="../../images/fulls/01.jpg" class="image fit from-right"><img src="../../images/thumbs/01.jpg" title="Ágata, acrílica s/ tela - 2009, 66 x 56 cm" alt="" /></a></div>
 							</div>
 							<br>
 
