--- a/port/port.html
+++ b/port/port.html
@@ -124,6 +124,18 @@
 								<div class="6u 12u(mobile)"><a href="../../images/fulls/02.jpg" class="image fit from-right"><img src="../../images/thumbs/02.jpg" title="First Spring Moments, acrílica s/ tela - 2013, 100 x 80 cm" alt="" /></a></div>
 							</div>
 							<br>
+
+							<div class="row 20% images">
+								<div class="6u 12u(mobile)"><a href="../../images/fulls/05.jpg" class="image fit from-left"><img src="../../images/thumbs/05.jpg" title="Caminhos, acrílica s/ tela - 2014, 90 x 120 cm" alt="" /></a></div>
+								<div class="6u 12u(mobile)"><a href="../../images/fulls/06.jpg" class="image fit from-right"><img src="../../images/thumbs/06.jpg" title="Pequenos Milagres, acrílica s/ tela - 2014, 100 x 130 cm" alt="" /></a></div>
+							</div>
+							<br>
+
+							<div class="row 20% images">
+								<div class="6u 12u(mobile)"><a href="../../images/fulls/Luz.jpg" class="image fit from-left"><img src="../../images/thumbs/Thumb Luz.png" title="Luz, acrílica s/ tela - 2014, 90 x 90 cm" alt="" /></a></div>
+								<div class="6u 12u(mobile)"><a href="../../images/fulls/03.jpg" class="image fit from-right"><img src="../../images/thumbs/03.jpg" title="Blue Lagoon, acrílica s/ tela - 2014, 100 x 70 cm" alt="" /></a></div>
+							</div>
+							<br>
 							
 							<div class="row 20% images">
 								<div class="6u 12u(mobile)"><a href="../../images/fulls/03.jpg" class="image fit from-left"><img src="../../images/thumbs/03.jpg" title="Blue Lagoon, acrílica s/ tela - 2014, 100 x 70 cm" alt="" /></a></div>
