--- a/port/port.html
+++ b/port/port.html
@@ -127,7 +127,7 @@
 
 							<div class="row 20% images">
 								<div class="6u 12u(mobile)"><a href="../../images/fulls/05.jpg" class="image fit from-left"><img src="../../images/thumbs/05.jpg" title="Caminhos, acrílica s/ tela - 2014, 90 x 120 cm" alt="" /></a></div>
-								<div class="6u 12u(mobile)"><a href="../../images/fulls/06.jpg" class="image fit from-right"><img src="../../images/thumbs/06.jpg" title="Pequenos Milagres, acrílica s/ tela - 2014, 100 x 130 cm" alt="" /></a></div>
+								<div class="6u 12u(mobile)"><a href="../../images/fulls/Little Miracles full.jpg" class="image fit from-right"><img src="../../images/thumbs/06.jpg" title="Pequenos Milagres, acrílica s/ tela - 2014, 100 x 130 cm" alt="" /></a></div>
 							</div>
 							<br>
 
@@ -138,17 +138,35 @@
 							<br>
 							
 							<div class="row 20% images">
-								<div class="6u 12u(mobile)"><a href="../../images/fulls/03.jpg" class="image fit from-left"><img src="../../images/thumbs/03.jpg" title="Blue Lagoon, acrílica s/ tela - 2014, 100 x 70 cm" alt="" /></a></div>
-
-								<div class="6u 12u(mobile)"><a href="../../images/fulls/04.jpg" class="image fit from-right"><img src="../../images/thumbs/04.jpg" title="Diving in a Virtual Night, acrílica s/ tela - 2015, 120 x 90cm" alt="" /></a></div>
+								<div class="6u 12u(mobile)"><a href="../../images/fulls/04.jpg" class="image fit from-left"><img src="../../images/thumbs/04.jpg" title="Diving in a Virtual Night, acrílica s/ tela - 2015, 120 x 90cm" alt="" /></a></div>
+								<div class="6u 12u(mobile)"><a href="../../images/fulls/Siesta.jpeg" class="image fit from-right"><img src="../../images/thumbs/Thumb Siesta.png" title="Siesta, acrílica s/ tela - 2015, 70 x 100 cm" alt="" /></a></div>
 							</div>
 							<br>
-							<div class="row 20% images">
-								<div class="6u 12u(mobile)"><a href="../../images/fulls/05.jpg" class="image fit from-left"><img src="../../images/thumbs/05.jpg" title="Caminhos,acrílica s/ tela - 2014, 90 x 120 cm" alt="" /></a></div>
 
-								<div class="6u 12u(mobile)"><a href="../../images/fulls/06.jpg" class="image fit from-right"><img src="../../images/thumbs/06.jpg" title="Pequenos Milagres,acrílica s/ tela - 2014, 100 x 130 cm" alt="" /></a></div>
+							<div class="row 20% images">
+								<div class="6u 12u(mobile)"><a href="../../images/fulls/Dreams.jpeg" class="image fit from-left"><img src="../../images/thumbs/Thumb Dreams.png" title="Dreams, acrílica s/ tela - 2016, 120 x 90cm" alt="" /></a></div>
+								<div class="6u 12u(mobile)"><a href="../../images/fulls/Um desejo.jpeg" class="image fit from-right"><img src="../../images/thumbs/Updated Thumb Um desejo.png" title="Um Desejo, acrílica s/ tela - 2021, 100 x 120cm" alt="" /></a></div>
 							</div>
-						</div>
+							<br>
+
+							<div class="row 20% images">
+								<div class="6u 12u(mobile)"><a href="../../images/fulls/Amal.jpeg" class="image fit from-left"><img src="../../images/thumbs/Thumb Amal.png" title="Åmål, acrílica s/ tela - 2021, 90 x 70cm" alt="" /></a></div>
+								<div class="6u 12u(mobile)"><a href="../../images/fulls/Algarve.jpegg" class="image fit from-right"><img src="../../images/thumbs/Thumb Algarve.png" title="Algarve, acrílica s/ tela - 2022, 100 x 100cm" alt="" /></a></div>
+							</div>
+							<br>
+
+
+							
+							<div class="row 20% images">
+								<div class="6u 12u(mobile)"><a href="../../images/fulls/Updated Orquideas.jpeg" class="image fit from-left"><img src="../../images/thumbs/Thumb Updated Orquideas.png" title="Orquídeas, acrílica s/ tela - 2023, 80 x 100 cm" alt="" /></a></div>
+
+								<div class="6u 12u(mobile)"><a href="../../images/fulls/Genesis I.jpeg" class="image fit from-right"><img src="../../images/thumbs/Thumb Genesis I.png" title="Genesis I, acrílica s/ tela - 2023, 80 x 80 cm" alt="" /></a></div>
+							</div>
+							<br>
+
+							<div class="row 20% images">
+								<div class="6u -3u 12u(mobile)"><a href="../../images/fulls/Genesis II.jpeg" class="image fit from-right"><img src="../../images/thumbs/Thumb Genesis II.png" title="Genesis II, acrílica s/ tela - 2023, 120 x 80 cm" alt="" /></a></div>
+							</div>
 
 				</div>
 				<a href="#contact" class="button style2 down anchored">Next</a>
