--- a/port/port.html
+++ b/port/port.html
@@ -151,7 +151,7 @@
 
 							<div class="row 20% images">
 								<div class="6u 12u(mobile)"><a href="../../images/fulls/Amal.jpeg" class="image fit from-left"><img src="../../images/thumbs/Thumb Amal.png" title="Åmål, acrílica s/ tela - 2021, 90 x 70cm" alt="" /></a></div>
-								<div class="6u 12u(mobile)"><a href="../../images/fulls/Algarve.jpegg" class="image fit from-right"><img src="../../images/thumbs/Thumb Algarve.png" title="Algarve, acrílica s/ tela - 2022, 100 x 100cm" alt="" /></a></div>
+								<div class="6u 12u(mobile)"><a href="../../images/fulls/Algarve.jpeg" class="image fit from-right"><img src="../../images/thumbs/Thumb Algarve.png" title="Algarve, acrílica s/ tela - 2022, 100 x 100cm" alt="" /></a></div>
 							</div>
 							<br>
 
