--- a/port/port.html
+++ b/port/port.html
@@ -38,14 +38,33 @@
 
 		<!-- Intro -->
 			<section id="intro" class="main style2 right dark fullscreen">
-				<div class="content box style2">
-					<header>
-						<h2></h2>
-					</header>
-					<p align="justify">Minha alegria é colocar na tela meu jeito de ver e sentir o que me rodeia.</p>
-					<p align="right"><img src="images/Signature.png"></p>
+    				<div class="content box style2" style = "padding: 1.3em;">
+
+        			<!-- First line of text -->
+        				<p style="margin: 0 0 5px 0; white-space: nowrap;">
+            					Minha alegria é colocar na tela 
+        				</p>
+
+        				<div style="display: flex; align-items: center; gap: 20px; margin-bottom:0;">
+
+            					<!-- Text for second and third lines -->
+            						<div>
+                						<p style="margin: 0;">
+									meu jeito de ver e sentir
+									<br>
+                    							o que me rodeia. 
+                						</p>
+            						</div>
+						
+            					<!-- Signature image -->
+            						<div>
+                						<img src="images/Signature.png" style="height: 70px; width: auto;">
+        						</div>
+        				</div>
 				</div>
-				<a href="#artist" class="button style2 down anchored">More</a>
+    				</div>
+    				
+   					<a href="#artist" class="button style2 down anchored">More</a>
 			</section>
 
 <!-- Meet the artist -->
