--- a/port/port.html
+++ b/port/port.html
@@ -68,11 +68,11 @@
 			</section>
 
 <!-- Meet the artist -->
-			<section id="artist" class="main style2 right dark fullscreen">
-				<div class="content box style2">
-					<p><center><img src="images/Angela.jpg" width="450px" height="350 px"></center></p>
-				</div>
-				<a href="#artist2" class="button style2 down anchored">More</a>
+			<section id="artist" class="main style2 right dark fullscreen"> 
+   			 	<div class="content box style2" style="width: 390px; padding: 20px; background-color: #F2E4BA;"> 
+        				<img src="images/Angela 2025.JPEG" width="350px" height="460px" style="display: block; margin: 0;">
+    				</div> 
+    			<a href="#artist2" class="button style2 down anchored">More</a>
 			</section>
 
 			<section id="artist2" class="main style3 primary">
