--- a/port/port.html
+++ b/port/port.html
@@ -50,7 +50,9 @@
             					<!-- Text for second and third lines -->
             						<div>
                 						<p style="margin: 0;">
-									meu jeito de ver e sentir
+									meu jeito de ver
+									<br>
+									e sentir
 									<br>
                     							o que me rodeia. 
                 						</p>
