--- a/port/port.html
+++ b/port/port.html
@@ -103,11 +103,16 @@
 
 		<!-- One -->
 			<section id="one" class="main style2 right dark fullscreen">
-				<div class="content box style2">
+				<div class="content box style2" style= "padding: 1em;">
 					<header>
 						<h2><center>TÉCNICA E ESTILO</center></h2>
 					</header>
-					<p align="justify"> Fascinada por figuras geométricas e natureza, Angela trabalha mesclando conceitos abstratos e figurativos. Cenas do cotidiano inspiram seu processo criativo, realizado na tela através de  pincéis, tinta acrílica, adesivos e fotografias. Encanta-se com a surpresa do resultado ao retirar os adesivos da tela, num jogo entre figuras e vazios, entre a opacidade e a transparência, entre o brilho das cores e a escuridão. E é na natureza, com seus elementos tão contraditórios e maravilhosos, como simetria e caos, força e fragilidade, paz e violência, luz e sombra, que a artista encontra material importante para seu trabalho.</p>
+					<p align="justify">  
+						Fascinada por figuras geométricas e natureza, Angela trabalha mesclando conceitos abstratos e figurativos. 
+						Cenas do cotidiano inspiram seu processo criativo, realizado na tela através de  pincéis, tinta acrílica, adesivos e fotografias. 
+						Encanta-se com a surpresa do resultado ao retirar os adesivos da tela, num jogo entre figuras e vazios, entre a opacidade e a transparência, entre o brilho das cores e a escuridão. 
+						E é na natureza, com seus elementos tão contraditórios e maravilhosos, como simetria e caos, força e fragilidade, paz e violência, luz e sombra, que a artista encontra material importante para seu trabalho.
+					</p>
 				</div>
 				<a href="#work" class="button style2 down anchored">Next</a>
 			</section>
