--- a/port/port.html
+++ b/port/port.html
@@ -71,8 +71,8 @@
 
 <!-- Meet the artist -->
 			<section id="artist" class="main style2 right dark fullscreen"> 
-   			 	<div class="content box style2" style="width: 390px; padding: 20px; background-color: #F2E4BA;"> 
-        				<img src="images/Angela 2025.JPEG" width="350px" height="460px" style="display: block; margin: 0;">
+   			 	<div class="content box style2" style="width: 310px; padding: 20px; background-color: #F2E4BA;"> 
+        				<img src="images/Angela 2025.JPEG" style="max-width:320px; max-height:360px; width:auto; height:auto; display: block; margin: 0;">
     				</div> 
     			<a href="#artist2" class="button style2 down anchored">More</a>
 			</section>
