--- a/port/port.html
+++ b/port/port.html
@@ -103,7 +103,7 @@
 
 		<!-- One -->
 			<section id="one" class="main style2 right dark fullscreen">
-				<div class="content box style2" style= "padding: 1em;">
+				<div class="content box style2" style= "padding: 1em; margin:60px auto">
 					<header>
 						<h2><center>TÉCNICA E ESTILO</center></h2>
 					</header>
@@ -114,7 +114,7 @@
 						E é na natureza, com seus elementos tão contraditórios e maravilhosos, como simetria e caos, força e fragilidade, paz e violência, luz e sombra, que a artista encontra material importante para seu trabalho.
 					</p>
 				</div>
-				<a href="#work" class="button style2 down anchored">Next</a>
+				<a href="#work" class="button style2 down anchored" style="bottom: -20px;">Next</a>
 			</section>
 
 		<!-- Two -->
