--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 			<header id="header">
 
 				<!-- Logo -->
-					<h1 id="logo">ANGELA STELIN</h1>
+					<h1 id="logo"><a href="https://www.angelastelin.com" target="_blank">ANGELA STELIN</a></h1>
 
 				<!-- Nav -->
 					<nav id="nav">
