--- a/index.html
+++ b/index.html
@@ -223,8 +223,8 @@
 							<br>
 
 							<div class="row 20% images">
-								<div class="6u 12u(mobile)"><a href="images/fulls/Updated Orquideas.jpeg" class="image fit from-left"><img src="images/thumbs/Thumb Updated Orquideas.png" title="Orquídeas, acrylic on canvas - 2023, 80 x 100cm" alt=""/></a></div>
-								<div class="6u 12u(mobile)"><a href="images/fulls/Genesis I.jpeg" class="image fit from-right"><img src="images/thumbs/Thumb Genesis I.png" title="Genesis I, acrylic on canvas - 2023, 80 x 80cm" alt=""/></a></div>
+								<div class="6u 12u(mobile)"><a href="images/fulls/Ondas Lunares.jpeg" class="image fit from-left"><img src="images/thumbs/Thumb Ondas Lunares.png" title="Ondas Lunares, acrylic on canvas - 2025, 70 x 100 cm" alt=""/></a></div>
+								<div class="6u 12u(mobile)"><a href="images/fulls/Flash.jpeg" class="image fit from-right"><img src="images/thumbs/Thumb Flash.png" title="Flash, acrylic on canvas - 2025, 80 x 120 cm" alt=""/></a></div>
 								
 							</div>
 							
