--- a/port/port.html
+++ b/port/port.html
@@ -189,20 +189,35 @@
 								<div class="6u 12u(mobile)"><a href="../../images/fulls/Amal.jpeg" class="image fit from-left"><img src="../../images/thumbs/Thumb Amal.png" title="Åmål, acrílica s/ tela - 2021, 90 x 70cm" alt="" /></a></div>
 								<div class="6u 12u(mobile)"><a href="../../images/fulls/Algarve.jpeg" class="image fit from-right"><img src="../../images/thumbs/Thumb Algarve.png" title="Algarve, acrílica s/ tela - 2022, 100 x 100cm" alt="" /></a></div>
 							</div>
-							<br>
-
-
 							
+							<br>
 							<div class="row 20% images">
 								<div class="6u 12u(mobile)"><a href="../../images/fulls/Updated Orquideas.jpeg" class="image fit from-left"><img src="../../images/thumbs/Thumb Updated Orquideas.png" title="Orquídeas, acrílica s/ tela - 2023, 80 x 100 cm" alt="" /></a></div>
 
 								<div class="6u 12u(mobile)"><a href="../../images/fulls/Genesis I.jpeg" class="image fit from-right"><img src="../../images/thumbs/Thumb Genesis I.png" title="Genesis I, acrílica s/ tela - 2023, 80 x 80 cm" alt="" /></a></div>
 							</div>
+
+							<br>
+							<div class="row 20% images">
+								<div class="6u 12u(mobile)"><a href="../../images/fulls/Genesis II.jpeg" class="image fit from-left"><img src="../../images/thumbs/Thumb Genesis II.png" title="Genesis II, acrílica s/ tela - 2023, 120 x 80 cm" alt="" /></a></div>
+
+								<div class="6u 12u(mobile)"><a href="../../images/fulls/Mares.jpeg" class="image fit from-right"><img src="../../images/thumbs/Thumb Mares.png" title="Marés, acrílica s/ tela - 2025, 70 x 50 cm" alt="" /></a></div>
+							</div>
+
+							<br>
+							<div class="row 20% images">
+								<div class="6u 12u(mobile)"><a href="../../images/fulls/Ondas Lunares.jpeg" class="image fit from-left"><img src="../../images/thumbs/Thumb Ondas Lunares.png" title="Ondas Lunares, acrílica s/ tela - 2025, 70 x 100 cm" alt="" /></a></div>
+
+								<div class="6u 12u(mobile)"><a href="../../images/fulls/Flash.jpeg" class="image fit from-right"><img src="../../images/thumbs/Thumb Flash.png" title="Flash, acrílica s/ tela - 2025, 80 x 120 cm" alt="" /></a></div>
+							</div>
+
+							<!-- This is the code if the row just has one single image. Currently not used
 							<br>
 
 							<div class="row 20% images">
 								<div class="6u -3u 12u(mobile)"><a href="../../images/fulls/Genesis II.jpeg" class="image fit from-right"><img src="../../images/thumbs/Thumb Genesis II.png" title="Genesis II, acrílica s/ tela - 2023, 120 x 80 cm" alt="" /></a></div>
 							</div>
+							-->
 
 				</div>
 				<a href="#contact" class="button style2 down anchored">Next</a>
